fixed genre overflow

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body::after {
   transition: 0.3s ease;
   padding: 5px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   backdrop-filter: blur(6px);
@@ -73,8 +74,9 @@ body::after {
 .movieImage{
     border-radius: 10px;
     height: 150px;
-    width: 110px;
     box-shadow: 0 8px 18px rgba(0,0,0,0.7);
+    width: 100%;
+    max-width: 110px;
 }
 .movieTitle{
     font-family: 'Montserrat', sans-serif;
@@ -107,16 +109,20 @@ body::after {
 .movieDetails{
 display: flex;
 flex-direction: column;
-width: 125px;
+width: 100%;
 align-items: self-start;
+flex-wrap: wrap;
 }
-.movieGenre{
+.movieGenres {
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
-  font-size: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 5px;
+  font-size: 9px;
+  margin-left: 10px;
+  text-decoration: underline;
+  line-height: 1.3;
+  white-space: normal;
+  word-break: break-word;
+  overflow: hidden;
 }
 @media (min-width: 768px) {
   body {
@@ -129,3 +135,4 @@ align-items: self-start;
     font-size: 18px;
   }
 }
+
